Implement platform selection routes and enhance onboarding experience
- Added new routes for platform selection and success pages in the App component, improving navigation for users during the onboarding process.
- Refactored the OnboardingCard component to update button text and remove unnecessary warning alerts, streamlining the user interface.
- Enhanced localization files to include detailed keys for platform selection, providing users with clear instructions and feedback during the selection process.
- Removed the deprecated PlatformSelection dialog from the Companies page, simplifying the component structure and improving maintainability.

This update significantly enhances the onboarding experience by providing a clearer path for users to select their platforms and ensuring a more intuitive interface.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -192,7 +192,6 @@
     "platformSelectionRemainingSingular": "You can select {{count}} more platform from your available options.",
     "platformSelectionRemainingPlural": "You can select {{count}} more platforms from your available options.",
     "platformSelectionWarning": "Important: Your platform selection cannot be changed after completion. Please choose carefully.",
-    "selectPlatforms": "Select Platforms",
     "addCompanyStep2": "Step 2: Add Your First Company",
     "addCompanyStep2Description": "Now that you've selected your review platforms, add your first company to start tracking reviews and managing your online reputation.",
     "addCompanyStep2Button": "Add Your First Company",
@@ -219,7 +218,30 @@
     "onboardingPlatformTitleNoSelection": "Get Started: Select Your Platforms",
     "onboardingPlatformDescriptionNoSelection": "Before you can start managing companies and reviews, you need to select the platforms where you want to pull reviews from.",
     "onboardingPlatformTitlePartial": "Complete Platform Selection ({{count}} of {{max}} selected)",
-    "onboardingPlatformDescriptionPartial": "You've already selected {{count}} platform{{plural}}. Complete your platform selection to get the most out of your subscription."
+    "onboardingPlatformDescriptionPartial": "You've already selected {{count}} platform{{plural}}. Complete your platform selection to get the most out of your subscription.",
+    "selectPlatforms": {
+      "button": "Select Platforms",
+      "title": "Select Your Platforms",
+      "subtitle": "Choose the review platforms you want to connect. You can select up to {{max}} platform{{plural}}.",
+      "subtitlePlural": "s",
+      "subtitleSingular": "",
+      "searchPlaceholder": "Search platforms...",
+      "selectedCount": "{{count}} of {{max}} selected",
+      "save": "Save Selection",
+      "saving": "Saving...",
+      "loading": "Loading platforms...",
+      "noResults": "No platforms found matching your search",
+      "warningTitle": "Platform selection cannot be changed",
+      "warningMessage": "Your platform selection is permanent and cannot be modified after you save. Please choose carefully.",
+      "errorMaxReached": "You can only select up to {{max}} platform{{plural}}. Please remove a platform first.",
+      "errorMaxReachedPlural": "s",
+      "errorMaxReachedSingular": "",
+      "errorMinRequired": "Please select at least one platform",
+      "errorSaveFailed": "Failed to save platform selections",
+      "successTitle": "Platforms Selected Successfully",
+      "successDescription": "Your platform selection has been saved. You can now start managing your companies and reviews.",
+      "backToCompanies": "Back to Companies"
+    }
   },
   "profile": {
     "title": "Profile Settings",
