--- a/reviews/src/i18n/locales/fr.json
+++ b/reviews/src/i18n/locales/fr.json
@@ -199,7 +199,6 @@
     "platformSelectionRemainingSingular": "Vous pouvez sélectionner {{count}} plateforme supplémentaire parmi vos options disponibles.",
     "platformSelectionRemainingPlural": "Vous pouvez sélectionner {{count}} plateformes supplémentaires parmi vos options disponibles.",
     "platformSelectionWarning": "Important : Votre sélection de plateformes ne peut pas être modifiée après la finalisation. Veuillez choisir soigneusement.",
-    "selectPlatforms": "Sélectionner les plateformes",
     "addCompanyStep2": "Étape 2 : Ajouter votre première entreprise",
     "addCompanyStep2Description": "Maintenant que vous avez sélectionné vos plateformes d'avis, ajoutez votre première entreprise pour commencer à suivre les avis et gérer votre réputation en ligne.",
     "addCompanyStep2Button": "Ajouter votre première entreprise",
@@ -228,7 +227,30 @@
     "onboardingPlatformTitleNoSelection": "Commencer : Sélectionner vos plateformes",
     "onboardingPlatformDescriptionNoSelection": "Avant de pouvoir commencer à gérer vos entreprises et avis, vous devez sélectionner les plateformes à partir desquelles vous souhaitez récupérer les avis.",
     "onboardingPlatformTitlePartial": "Compléter la sélection de plateformes ({{count}} sur {{max}} sélectionnées)",
-    "onboardingPlatformDescriptionPartial": "Vous avez déjà sélectionné {{count}} plateforme{{plural}}. Complétez votre sélection de plateformes pour tirer le meilleur parti de votre abonnement."
+    "onboardingPlatformDescriptionPartial": "Vous avez déjà sélectionné {{count}} plateforme{{plural}}. Complétez votre sélection de plateformes pour tirer le meilleur parti de votre abonnement.",
+    "selectPlatforms": {
+      "button": "Sélectionner les plateformes",
+      "title": "Sélectionnez vos plateformes",
+      "subtitle": "Choisissez les plateformes d'avis que vous souhaitez connecter. Vous pouvez sélectionner jusqu'à {{max}} plateforme{{plural}}.",
+      "subtitlePlural": "s",
+      "subtitleSingular": "",
+      "searchPlaceholder": "Rechercher des plateformes...",
+      "selectedCount": "{{count}} sur {{max}} sélectionnées",
+      "save": "Enregistrer la sélection",
+      "saving": "Enregistrement...",
+      "loading": "Chargement des plateformes...",
+      "noResults": "Aucune plateforme trouvée correspondant à votre recherche",
+      "warningTitle": "La sélection de plateformes ne peut pas être modifiée",
+      "warningMessage": "Votre sélection de plateformes est permanente et ne peut pas être modifiée après l'enregistrement. Veuillez choisir soigneusement.",
+      "errorMaxReached": "Vous ne pouvez sélectionner que jusqu'à {{max}} plateforme{{plural}}. Veuillez d'abord retirer une plateforme.",
+      "errorMaxReachedPlural": "s",
+      "errorMaxReachedSingular": "",
+      "errorMinRequired": "Veuillez sélectionner au moins une plateforme",
+      "errorSaveFailed": "Échec de l'enregistrement des sélections de plateformes",
+      "successTitle": "Plateformes sélectionnées avec succès",
+      "successDescription": "Votre sélection de plateformes a été enregistrée. Vous pouvez maintenant commencer à gérer vos entreprises et vos avis.",
+      "backToCompanies": "Retour aux entreprises"
+    }
   },
   "platform": {
     "title": "Connexion à la plateforme",
