Refactor PlatformCard component for improved layout and interaction
- Enhanced the PlatformCard component by introducing a CardMedia section for better logo handling and visual appeal.
- Updated the toggle functionality to prevent event propagation, ensuring a smoother user experience.
- Improved styling and hover effects for better responsiveness and user engagement.
- Added localization support for button text, enhancing accessibility for users in different languages.

This update significantly enhances the user experience by providing a more visually appealing and interactive platform selection interface.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -221,6 +221,8 @@
     "onboardingPlatformDescriptionPartial": "You've already selected {{count}} platform{{plural}}. Complete your platform selection to get the most out of your subscription.",
     "selectPlatforms": {
       "button": "Select Platforms",
+      "select": "Select",
+      "selected": "Selected",
       "title": "Select Your Platforms",
       "subtitle": "Choose the review platforms you want to connect. You can select up to {{max}} platform{{plural}}.",
       "subtitlePlural": "s",
