Enhance PlatformCard component with locking functionality and improved user feedback
- Introduced a locking mechanism for persisted platforms, preventing users from unselecting them and providing visual feedback through a lock indicator.
- Updated the button tooltip to inform users about selection limits and locked platforms, enhancing clarity during interactions.
- Added new localization keys for error messages and tooltips, improving accessibility for users in both English and French.

This update significantly improves the user experience by providing clear guidance on platform selection and preventing unintended actions on locked platforms.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -240,6 +240,10 @@
       "errorMaxReachedSingular": "",
       "errorMinRequired": "Please select at least one platform",
       "errorSaveFailed": "Failed to save platform selections",
+      "errorCannotUnselect": "You cannot unselect a platform that has already been saved.",
+      "platformLocked": "This platform has already been saved and cannot be removed",
+      "locked": "Locked",
+      "cannotSelect": "You have reached your platform limit",
       "successTitle": "Platforms Selected Successfully",
       "successDescription": "Your platform selection has been saved. You can now start managing your companies and reviews.",
       "backToCompanies": "Back to Companies"
