Add Transfer Ownership feature with localization support
- Introduced a new route for transferring company ownership, accessible only to admins who own the company.
- Implemented a TransferOwnership component with a user-friendly interface for selecting a new owner and confirming the transfer.
- Enhanced localization files to include English and French translations for all relevant strings related to the ownership transfer process.
- Updated the CompanyPage to conditionally display the Transfer Ownership button based on user permissions.

This update improves the functionality of company management by allowing for seamless ownership transfers while ensuring clarity and accessibility through localization.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -587,6 +587,7 @@
     "backToDashboard": "Back to Dashboard",
     "back": "Back",
     "refresh": "Refresh",
+    "transferOwnership": "Transfer Ownership",
     "loadingCompanyData": "Loading company data...",
     "companyNotFound": "Company not found",
     "dataFilters": "Data Filters",
@@ -679,5 +680,34 @@
     "verificationPending": "Subscription is being processed. Please refresh this page in a moment.",
     "verificationError": "Unable to verify subscription status. Please check your profile.",
     "verifying": "Verifying your subscription..."
+  },
+  "transferOwnership": {
+    "title": "Transfer Company Ownership",
+    "description": "Transfer ownership of a company to another user",
+    "loading": "Loading...",
+    "back": "Back",
+    "backToCompany": "Back to Company",
+    "companyInfo": "Company Information",
+    "companyName": "Company Name",
+    "description": "Description",
+    "industry": "Industry",
+    "totalLocations": "Total Locations",
+    "totalReviews": "Total Reviews",
+    "selectUser": "Select New Owner",
+    "userSearch": "Search by email or name",
+    "userPlaceholder": "Type to search users...",
+    "noUsers": "No users found",
+    "transfer": "Transfer Ownership",
+    "transferring": "Transferring...",
+    "confirmTitle": "Confirm Ownership Transfer",
+    "confirmMessage": "Are you sure you want to transfer ownership of {{companyName}} to {{userEmail}}?",
+    "confirmWarning": "This will transfer all company data including locations, reviews, and platform connections to the new owner. This action cannot be undone.",
+    "cancel": "Cancel",
+    "confirm": "Confirm Transfer",
+    "errorNotOwner": "You can only transfer ownership of companies you own.",
+    "errorFetchCompany": "Failed to load company information",
+    "errorFetchUsers": "Failed to load users",
+    "errorNoUser": "Please select a user to transfer ownership to",
+    "errorTransfer": "Failed to transfer ownership"
   }
 }
