--- a/reviews/src/i18n/locales/fr.json
+++ b/reviews/src/i18n/locales/fr.json
@@ -596,6 +596,7 @@
     "backToDashboard": "Retour au tableau de bord",
     "back": "Retour",
     "refresh": "Actualiser",
+    "transferOwnership": "Transférer la propriété",
     "loadingCompanyData": "Chargement des données de l'entreprise...",
     "companyNotFound": "Entreprise introuvable",
     "dataFilters": "Filtres de données",
@@ -688,5 +689,34 @@
     "verificationPending": "L'abonnement est en cours de traitement. Veuillez actualiser cette page dans un instant.",
     "verificationError": "Impossible de vérifier le statut de l'abonnement. Veuillez vérifier votre profil.",
     "verifying": "Vérification de votre abonnement..."
+  },
+  "transferOwnership": {
+    "title": "Transférer la propriété de l'entreprise",
+    "description": "Transférer la propriété d'une entreprise à un autre utilisateur",
+    "loading": "Chargement...",
+    "back": "Retour",
+    "backToCompany": "Retour à l'entreprise",
+    "companyInfo": "Informations sur l'entreprise",
+    "companyName": "Nom de l'entreprise",
+    "description": "Description",
+    "industry": "Secteur d'activité",
+    "totalLocations": "Total des emplacements",
+    "totalReviews": "Total des avis",
+    "selectUser": "Sélectionner le nouveau propriétaire",
+    "userSearch": "Rechercher par e-mail ou nom",
+    "userPlaceholder": "Tapez pour rechercher des utilisateurs...",
+    "noUsers": "Aucun utilisateur trouvé",
+    "transfer": "Transférer la propriété",
+    "transferring": "Transfert en cours...",
+    "confirmTitle": "Confirmer le transfert de propriété",
+    "confirmMessage": "Êtes-vous sûr de vouloir transférer la propriété de {{companyName}} à {{userEmail}} ?",
+    "confirmWarning": "Cela transférera toutes les données de l'entreprise, y compris les emplacements, les avis et les connexions aux plateformes, au nouveau propriétaire. Cette action ne peut pas être annulée.",
+    "cancel": "Annuler",
+    "confirm": "Confirmer le transfert",
+    "errorNotOwner": "Vous ne pouvez transférer la propriété que des entreprises que vous possédez.",
+    "errorFetchCompany": "Échec du chargement des informations de l'entreprise",
+    "errorFetchUsers": "Échec du chargement des utilisateurs",
+    "errorNoUser": "Veuillez sélectionner un utilisateur pour transférer la propriété",
+    "errorTransfer": "Échec du transfert de propriété"
   }
 }
