Add delete company functionality with localization support
- Implemented a delete company feature on the CompanyPage, allowing admins to permanently delete a company and all associated data.
- Added confirmation dialog to prevent accidental deletions, enhancing user experience and safety.
- Updated localization files to include English and French translations for all relevant strings related to the delete company process.

This update improves company management by providing a clear and secure method for admins to delete companies, ensuring clarity through localization.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -641,7 +641,16 @@
     "stayTuned": "Stay tuned for updates! We'll notify you as soon as this feature becomes available.",
     "gotIt": "Got it",
     "pleaseAddLocation": "Please add at least one location to this company before connecting platforms.",
-    "reviewsAvailableShortly": "Reviews from {{platform}} will be available shortly. Use the refresh button in the top right to check for new reviews."
+    "reviewsAvailableShortly": "Reviews from {{platform}} will be available shortly. Use the refresh button in the top right to check for new reviews.",
+    "deleteCompany": "Delete Company",
+    "deleteCompanyWarning": "Permanently delete this company and all associated data. This action cannot be undone.",
+    "deleteCompanyPermanentWarning": "This action is permanent and cannot be undone.",
+    "deleteCompanyConfirmTitle": "Delete Company?",
+    "deleteCompanyConfirmMessage": "Are you sure you want to delete {{companyName}}? This will permanently delete all company data including locations, reviews, and platform connections. This action cannot be undone.",
+    "deleteCompanyButton": "Delete",
+    "deleteCompanyDeleting": "Deleting...",
+    "deleteCompanyError": "Failed to delete company",
+    "deleteCompanySuccess": "Company deleted successfully"
   },
   "footer": {
     "privacyPolicy": "Privacy Policy",
