Enhance PlatformConnectionDialog and PlatformSelection components with admin features and localization support
- Updated PlatformConnectionDialog to fetch all active platforms for admin users, improving platform management capabilities.
- Implemented checks for existing platform connections to prevent duplicates, enhancing user feedback during the connection process.
- Enhanced PlatformSelection component to provide unlimited platform selection for admins, improving usability and flexibility.
- Updated localization files to include new messages for platform connection errors and selection limits, ensuring clarity for users in both English and French.

This update significantly improves the functionality and user experience for admins managing platform connections, while ensuring clear communication through localization.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -505,7 +505,8 @@
     },
     "connectPlatformToLocation": "Connect Platform to Location",
     "selectPlatform": "Select a Platform",
-    "jobCreatedMessage": "A job has been created to get your reviews. Reviews will be available shortly."
+    "jobCreatedMessage": "A job has been created to get your reviews. Reviews will be available shortly.",
+    "slugAlreadyExists": "This platform location ID already exists in the system. If this page belongs to you, please contact tech@boresha.ca for assistance."
   },
   "pricing": {
     "title": "Pricing",
