Enhance PlatformConnectionDialog with platform instructions and localization support
- Updated PlatformConnectionDialog to fetch and display platform-specific instructions when a platform is selected, improving user guidance during the connection process.
- Introduced a Help button that opens a modal with detailed instructions on finding the platform slug, enhancing user experience and clarity.
- Updated localization files to include new messages for loading instructions and slug guidance in both English and French, ensuring accessibility for all users.

This update significantly improves the functionality and user experience of the PlatformConnectionDialog by providing clear instructions and enhancing localization support.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -482,6 +482,16 @@
     "pleaseEnterPlatformId": "Please enter a Platform Location ID",
     "failedVerifyListing": "Failed to verify listing. Please check the ID.",
     "failedConnectPlatform": "Failed to connect platform",
+    "howToFindSlug": "How to find the slug?",
+    "loadingInstructions": "Loading instructions...",
+    "slugInstructions": {
+      "title": "Where can I find the slug?",
+      "explanation": "The slug is the part of the URL that uniquely identifies the business. It varies from network to another.",
+      "selectNetwork": "Select a network to find out where to find the slug and what are the acceptable formats:",
+      "network": "Network",
+      "exampleUrl": "Example of business URL",
+      "acceptableFormats": "Acceptable slug formats in order of preference:"
+    },
     "platformIdLabels": {
       "pageId": "Page ID",
       "placeId": "Place ID",
