Refactor PlatformConnectionDialog and PlatformSlugInstructionsModal to streamline instruction retrieval
- Removed the fetching of platform instructions from the database, now utilizing a hardcoded object for improved performance and simplicity.
- Updated the PlatformConnectionDialog to pass the selected platform slug instead of instructions, enhancing clarity in data handling.
- Adjusted the PlatformSlugInstructionsModal to derive instructions directly from the slug, ensuring a more efficient lookup process.
- Modified localization files to update the label for location ID, improving user guidance.

This update enhances the efficiency of the platform connection process by simplifying instruction retrieval and improving user experience through clearer localization.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -497,7 +497,7 @@
       "placeId": "Place ID",
       "businessId": "Business ID",
       "restaurantId": "Restaurant ID",
-      "locationId": "Location ID"
+      "locationId": "Enter slug ID"
     },
     "platformIdPlaceholders": {
       "facebook": "e.g., 123456789012345",
