Implement language-specific legal pages and enhance footer links with localization support
- Added language-specific routes for Privacy Policy and Terms of Use, redirecting users based on their selected language (English or French).
- Updated the Footer component to dynamically link to the appropriate legal pages based on the current language, improving accessibility for users.
- Introduced new localization keys for legal page titles and descriptions in both English and French, ensuring clarity and consistency in user experience.

This update significantly enhances the localization of legal content, providing a more tailored experience for users based on their language preferences.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -53,7 +53,8 @@
     "less": "Less",
     "language": "Language",
     "english": "English",
-    "french": "French"
+    "french": "French",
+    "pricing": "Pricing"
   },
   "auth": {
     "welcome": "Welcome",
@@ -139,6 +140,10 @@
     "singleReview": "review",
     "multipleReviews": "reviews",
     "viewDetails": "View Details",
+    "myCompanies": "My Companies",
+    "otherCompanies": "Other Companies",
+    "noCompaniesYetAdmin": "You don't have any companies yet",
+    "noOtherCompanies": "No other companies in the system",
     "addCompanyDialog": "Add Company",
     "companyName": "Company Name",
     "industry": "Industry",
@@ -729,5 +734,10 @@
     "errorFetchUsers": "Failed to load users",
     "errorNoUser": "Please select a user to transfer ownership to",
     "errorTransfer": "Failed to transfer ownership"
+  },
+  "upgrade": {
+    "dialogTitle": "Upgrade Required",
+    "viewPricing": "View Pricing",
+    "cancel": "Cancel"
   }
 }
