some minor updates to pricing

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -541,6 +541,9 @@
     "mostPopular": "MOST POPULAR",
     "current": "CURRENT",
     "perMonth": "/month",
+    "customPricing": "Custom Pricing",
+    "standardPlanName": "Standard",
+    "professionalPlanName": "Professional",
     "choosePlanButton": "Choose Plan",
     "loading": "Loading...",
     "feature": "Feature",
