--- a/reviews/src/i18n/locales/fr.json
+++ b/reviews/src/i18n/locales/fr.json
@@ -541,6 +541,9 @@
     "mostPopular": "LE PLUS POPULAIRE",
     "current": "ACTUEL",
     "perMonth": "/mois",
+    "customPricing": "Tarification personnalisée",
+    "standardPlanName": "Standard",
+    "professionalPlanName": "Professionnel",
     "choosePlanButton": "Choisir le forfait",
     "loading": "Chargement...",
     "feature": "Fonctionnalité",
