Enhance ReviewComponent with replies functionality and localization support
- Added replies dialog to display user replies for reviews, improving interactivity and user engagement.
- Introduced new raw_data structure in Review interface to accommodate replies.
- Updated English and French localization files to include new strings for replies functionality.
- Refactored ReviewsList component to support the new replies structure.

This update enhances the ReviewComponent by providing a more interactive experience for users, allowing them to view replies to reviews, and ensures proper localization for better accessibility.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -669,7 +669,9 @@
     "deleteCompanyButton": "Delete",
     "deleteCompanyDeleting": "Deleting...",
     "deleteCompanyError": "Failed to delete company",
-    "deleteCompanySuccess": "Company deleted successfully"
+    "deleteCompanySuccess": "Company deleted successfully",
+    "hasReply": "Has Reply",
+    "replies": "Replies"
   },
   "footer": {
     "privacyPolicy": "Privacy Policy",
